# mrmu-rs

./: Cargo.toml  LICENSE
.cargo/: config.toml
src/: command.rs  main.rs  message.rs  message_builder.rs  message_code.rs  packet_sock.rs  reginfo.rs
src/command/: customer_info_read.rs  fw_version_get.rs  read_atu.rs  read_port.rs  read_vtu.rs  regop.rs  scan.rs  verinfo.rs  version_read.rs
src/message/: customer_info_read.rs  fw_version.rs  getid.rs  header.rs  register.rs  response_error.rs  version_read.rs
src/message/customer_info_read/: customer_info_read_request.rs  customer_info_read_response.rs
src/message/fw_version/: fw_version_request.rs  fw_version_response.rs
src/message/getid/: getid_request.rs  getid_response.rs
src/message/header/: header_request.rs  header_response.rs
src/message/register/: register_op_request.rs  register_op_response.rs  register_request.rs  register_response.rs
src/message/version_read/: version_read_request.rs  version_read_response.rs
src/reginfo/: global1_register.rs  port_register.rs
